<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.ex04.presentation.Ut01Ex04">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@id/img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:gravity="center_vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="@dimen/sizeImage_horizontal"
                        android:layout_height="@dimen/sizeImage_vertical"
                        android:contentDescription="burguer"
                        android:src="@drawable/hamburguer_svgrepo_com" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="25dp"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/yellow"
                            android:text="@string/app_name"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@id/nombreBurguer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/nombreBurguer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nombreBurguer"
                        android:textColor="@color/yellow"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nombreBurguer"
                    android:gravity="right"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nombreCalle"
                        android:textColor="@color/yellow"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img"
                android:background="@color/cardview_dark_background"
                android:gravity="left"
                android:padding="10dp">

                <!--resto contenido-->

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/stars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text"
                android:background="@color/cardview_dark_background"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/estrella1"
                        android:layout_width="@dimen/sizeImageStarHeart_horizontal"
                        android:layout_height="@dimen/sizeImageStarHeart_vertical"
                        android:contentDescription="imagen prueba"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_svgrepo_com"
                        app:tint="@color/yellow" />

                    <ImageView
                        android:id="@+id/estrella2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_toEndOf="@id/estrella1"
                        android:contentDescription="imagen prueba"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_svgrepo_com"
                        app:tint="@color/yellow" />

                    <ImageView
                        android:id="@+id/testrella3"
                        android:layout_width="@dimen/sizeImageStarHeart_horizontal"
                        android:layout_height="@dimen/sizeImageStarHeart_vertical"
                        android:layout_toEndOf="@id/estrella2"
                        android:contentDescription="imagen prueba"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_svgrepo_com"
                        app:tint="@color/yellow" />

                    <ImageView
                        android:id="@+id/estrella4"
                        android:layout_width="@dimen/sizeImageStarHeart_horizontal"
                        android:layout_height="@dimen/sizeImageStarHeart_vertical"
                        android:layout_toEndOf="@id/testrella3"
                        android:contentDescription="imagen prueba"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_svgrepo_com"
                        app:tint="@color/yellow" />

                    <ImageView
                        android:id="@+id/estrella5"
                        android:layout_width="@dimen/sizeImageStarHeart_horizontal"
                        android:layout_height="@dimen/sizeImageStarHeart_vertical"
                        android:layout_toEndOf="@id/estrella4"
                        android:contentDescription="imagen prueba"
                        android:scaleType="centerCrop"
                        android:src="@drawable/star_svgrepo_com"
                        app:tint="@color/yellow" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <ImageView
                        android:id="@+id/corazon"
                        android:layout_width="@dimen/sizeImageStarHeart_horizontal"
                        android:layout_height="@dimen/sizeImageStarHeart_vertical"
                        android:contentDescription="imagen prueba"
                        android:scaleType="centerCrop"
                        android:src="@drawable/heart_svgrepo_com"
                        app:tint="@color/red" />
                </RelativeLayout>


            </RelativeLayout>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</RelativeLayout>